IU-2023.1.5 <deski@DESKTOP-EIKUK3F Update AndroidCommentsKotlin.xml, JSP.xml, user.xml, AndroidXML.xml, AsciiDoc.xml, Zen HTML.xml, Kotlin.xml

--- a/templates/user.xml
+++ b/templates/user.xml
@@ -183,7 +183,7 @@
       <option name="JSON_STRING_VALUES" value="false" />
     </context>
   </template>
-  <template name="java_doc_true" value="{@code true}" toReformat="true" toShortenFQNames="true">
+  <template name="java_doc_true" value="{@code true}" description="" toReformat="true" toShortenFQNames="true">
     <context>
       <option name="JAVA_CODE" value="true" />
     </context>
